# ticky

./: README.md
ticky-main/: Cargo.toml
ticky-main/migrations/: 001_create_users_table.sql  002_create_tickets_table.sql
ticky-main/src/: db.rs  main.rs  routes.rs
ticky-main/src/handlers/: auth.rs  mod.rs  ticket.rs
ticky-main/src/models/: mod.rs  ticket.rs  user.rs
