[package]
name = "support-tick"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "macros", "chrono"] }
hyper = "1"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }